Update on details again

--- a/FieldWork_AppliedEcology_Group1.ipynb
+++ b/FieldWork_AppliedEcology_Group1.ipynb
@@ -120,6 +120,16 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "ca390af6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vars_list = [\"dbh\", \"height\", \"agb\", \"lai\", \"shannon\", \"soil_pH\", \"ibp\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "b5966e09",
    "metadata": {},
    "outputs": [
@@ -144,7 +154,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>tree_id</th>\n",
        "      <th>dbh</th>\n",
        "      <th>height</th>\n",
        "      <th>agb</th>\n",
@@ -152,7 +161,6 @@
        "      <th>shannon</th>\n",
        "      <th>soil_pH</th>\n",
        "      <th>ibp</th>\n",
-       "      <th>group</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -165,12 +173,9 @@
        "      <td>191.000000</td>\n",
        "      <td>191.000000</td>\n",
        "      <td>191.000000</td>\n",
-       "      <td>191.000000</td>\n",
-       "      <td>191.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>103.926702</td>\n",
        "      <td>20.078208</td>\n",
        "      <td>14.457539</td>\n",
        "      <td>634.679856</td>\n",
@@ -178,11 +183,9 @@
        "      <td>0.777027</td>\n",
        "      <td>4.958691</td>\n",
        "      <td>22.329843</td>\n",
-       "      <td>4.968586</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>62.886070</td>\n",
        "      <td>16.624011</td>\n",
        "      <td>10.602421</td>\n",
        "      <td>2635.663825</td>\n",
@@ -190,11 +193,9 @@
        "      <td>0.387937</td>\n",
        "      <td>0.296793</td>\n",
        "      <td>11.376388</td>\n",
-       "      <td>2.788899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
        "      <td>0.808507</td>\n",
        "      <td>1.400000</td>\n",
        "      <td>0.033459</td>\n",
@@ -202,11 +203,9 @@
        "      <td>0.000000</td>\n",
        "      <td>4.120000</td>\n",
        "      <td>8.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>48.500000</td>\n",
        "      <td>4.451564</td>\n",
        "      <td>3.550000</td>\n",
        "      <td>4.569563</td>\n",
@@ -214,11 +213,9 @@
        "      <td>0.562335</td>\n",
        "      <td>4.710000</td>\n",
        "      <td>12.000000</td>\n",
-       "      <td>3.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>96.000000</td>\n",
        "      <td>16.233804</td>\n",
        "      <td>13.000000</td>\n",
        "      <td>61.290000</td>\n",
@@ -226,11 +223,9 @@
        "      <td>0.759547</td>\n",
        "      <td>5.040000</td>\n",
        "      <td>22.000000</td>\n",
-       "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>160.500000</td>\n",
        "      <td>32.945073</td>\n",
        "      <td>22.950000</td>\n",
        "      <td>481.029872</td>\n",
@@ -238,11 +233,9 @@
        "      <td>1.060000</td>\n",
        "      <td>5.140000</td>\n",
        "      <td>29.000000</td>\n",
-       "      <td>7.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>209.000000</td>\n",
        "      <td>66.800000</td>\n",
        "      <td>40.000000</td>\n",
        "      <td>28195.001960</td>\n",
@@ -250,46 +243,45 @@
        "      <td>1.520000</td>\n",
        "      <td>5.670000</td>\n",
        "      <td>42.000000</td>\n",
-       "      <td>10.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          tree_id         dbh      height           agb         lai  \\\n",
-       "count  191.000000  191.000000  191.000000    191.000000  191.000000   \n",
-       "mean   103.926702   20.078208   14.457539    634.679856    5.291466   \n",
-       "std     62.886070   16.624011   10.602421   2635.663825    1.360952   \n",
-       "min      1.000000    0.808507    1.400000      0.033459    1.420000   \n",
-       "25%     48.500000    4.451564    3.550000      4.569563    4.180000   \n",
-       "50%     96.000000   16.233804   13.000000     61.290000    5.580000   \n",
-       "75%    160.500000   32.945073   22.950000    481.029872    6.530000   \n",
-       "max    209.000000   66.800000   40.000000  28195.001960    6.900000   \n",
+       "              dbh      height           agb         lai     shannon  \\\n",
+       "count  191.000000  191.000000    191.000000  191.000000  191.000000   \n",
+       "mean    20.078208   14.457539    634.679856    5.291466    0.777027   \n",
+       "std     16.624011   10.602421   2635.663825    1.360952    0.387937   \n",
+       "min      0.808507    1.400000      0.033459    1.420000    0.000000   \n",
+       "25%      4.451564    3.550000      4.569563    4.180000    0.562335   \n",
+       "50%     16.233804   13.000000     61.290000    5.580000    0.759547   \n",
+       "75%     32.945073   22.950000    481.029872    6.530000    1.060000   \n",
+       "max     66.800000   40.000000  28195.001960    6.900000    1.520000   \n",
        "\n",
-       "          shannon     soil_pH         ibp       group  \n",
-       "count  191.000000  191.000000  191.000000  191.000000  \n",
-       "mean     0.777027    4.958691   22.329843    4.968586  \n",
-       "std      0.387937    0.296793   11.376388    2.788899  \n",
-       "min      0.000000    4.120000    8.000000    1.000000  \n",
-       "25%      0.562335    4.710000   12.000000    3.000000  \n",
-       "50%      0.759547    5.040000   22.000000    4.000000  \n",
-       "75%      1.060000    5.140000   29.000000    7.000000  \n",
-       "max      1.520000    5.670000   42.000000   10.000000  "
+       "          soil_pH         ibp  \n",
+       "count  191.000000  191.000000  \n",
+       "mean     4.958691   22.329843  \n",
+       "std      0.296793   11.376388  \n",
+       "min      4.120000    8.000000  \n",
+       "25%      4.710000   12.000000  \n",
+       "50%      5.040000   22.000000  \n",
+       "75%      5.140000   29.000000  \n",
+       "max      5.670000   42.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.describe()"
+    "df[vars_list].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "d1fb3121",
    "metadata": {},
    "outputs": [
@@ -381,7 +373,7 @@
        "Sambucus Racemosa      1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "73f24b7f",
    "metadata": {},
    "outputs": [
@@ -444,7 +436,7 @@
        "Mono                   8"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "99475b3d",
    "metadata": {},
    "outputs": [
@@ -591,7 +583,7 @@
        "          10                 4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "59156866",
    "metadata": {},
    "outputs": [
@@ -718,7 +710,7 @@
        "          Quercus Petraea        1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "e957d31a",
    "metadata": {},
    "outputs": [
@@ -826,7 +818,7 @@
        "Mono       3.701267e+05  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "f558ea96",
    "metadata": {},
    "outputs": [
@@ -897,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "cf0b82da",
    "metadata": {},
    "outputs": [
@@ -979,7 +971,7 @@
        "Mono       {'mean': 4.98, 'var': 0.22}  {'mean': 13.83, 'var': 23.37}  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "50a5aec9",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "87a73f0d",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "9854d8e4",
    "metadata": {},
    "outputs": [],
@@ -1148,16 +1140,6 @@
     "        print(tukey)\n",
     "    else:\n",
     "        print(\"\\nNo significant differences found among groups.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "093908f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dependent_vars = [\"dbh\", \"height\", \"agb\", \"lai\", \"shannon\", \"soil_pH\", \"ibp\"]"
    ]
   },
   {
@@ -1281,7 +1263,7 @@
     }
    ],
    "source": [
-    "for var in dependent_vars:\n",
+    "for var in vars_list:\n",
     "    anova_tukey(df, var, \"plot_type\")"
    ]
   },
@@ -1670,7 +1652,7 @@
     }
    ],
    "source": [
-    "for var in dependent_vars:\n",
+    "for var in vars_list:\n",
     "    anova_tukey(df, var, \"species\")"
    ]
   },
@@ -1747,7 +1729,7 @@
    ],
    "source": [
     "# shapiro test for normality\n",
-    "for var in dependent_vars:\n",
+    "for var in vars_list:\n",
     "    stat, p = shapiro(df[var])\n",
     "    print(\"=\" * 60)\n",
     "    print(f\"Shapiro-Wilk Test for: {var}\")\n",
@@ -1775,7 +1757,7 @@
    "outputs": [],
    "source": [
     "df_log = df.copy()\n",
-    "df_log[dependent_vars] = df_log[dependent_vars].apply(lambda x: np.log(x+1))"
+    "df_log[vars_list] = df_log[vars_list].apply(lambda x: np.log(x+1))"
    ]
   },
   {
