--- a/FieldWork_AppliedEcology_Group1.ipynb
+++ b/FieldWork_AppliedEcology_Group1.ipynb
@@ -2324,18 +2324,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "id": "7270848b",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_log = df.copy()\n",
-    "df_log[vars_list] = df_log[vars_list].apply(lambda x: np.log(x+1))"
+    "df_log[vars_list] = df_log[vars_list].apply(lambda x: np.log(x+1))\n",
+    "df_log[\"soil_pH\"] = df[\"soil_pH\"]  # pH values remain unchanged"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "id": "4c8314fb",
    "metadata": {},
    "outputs": [
@@ -2404,7 +2405,7 @@
          "type": "integer"
         }
        ],
-       "ref": "a5f7e7f9-8851-4d97-82cb-ccf3ce9457f7",
+       "ref": "6568b9bc-7727-4abb-a98a-31308e8a67e5",
        "rows": [
         [
          "0",
@@ -2416,7 +2417,7 @@
          "0.9480853546842273",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2430,7 +2431,7 @@
          "3.5810965825956815",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2444,7 +2445,7 @@
          "0.2848016183969236",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2458,7 +2459,7 @@
          "2.7055051445946035",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2472,7 +2473,7 @@
          "4.8116261997769465",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2486,7 +2487,7 @@
          "4.57525567885229",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2500,7 +2501,7 @@
          "1.741249035858796",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2514,7 +2515,7 @@
          "3.7080377100627557",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2528,7 +2529,7 @@
          "3.99212646765085",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2542,7 +2543,7 @@
          "3.9235567521222356",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2556,7 +2557,7 @@
          "2.8595418786597633",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2570,7 +2571,7 @@
          "7.891885434269604",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2584,7 +2585,7 @@
          "3.663360187599973",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2598,7 +2599,7 @@
          "2.565922789884058",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2612,7 +2613,7 @@
          "0.6157261566746953",
          "2.0028304393079956",
          "0.7752154676648624",
-         "1.7732559976634952",
+         "4.89",
          "3.258096538021482",
          "1"
         ],
@@ -2626,7 +2627,7 @@
          "6.411683800411558",
          "1.706564623164823",
          "0.0",
-         "1.8976198599275322",
+         "5.67",
          "2.5649493574615367",
          "1"
         ],
@@ -2640,7 +2641,7 @@
          "5.523502358153205",
          "1.706564623164823",
          "0.0",
-         "1.8976198599275322",
+         "5.67",
          "2.5649493574615367",
          "1"
         ],
@@ -2654,7 +2655,7 @@
          "7.013309105117408",
          "1.706564623164823",
          "0.0",
-         "1.8976198599275322",
+         "5.67",
          "2.5649493574615367",
          "1"
         ],
@@ -2668,7 +2669,7 @@
          "6.516359524248106",
          "1.706564623164823",
          "0.0",
-         "1.8976198599275322",
+         "5.67",
          "2.5649493574615367",
          "1"
         ],
@@ -2682,7 +2683,7 @@
          "6.5197109448802",
          "1.706564623164823",
          "0.0",
-         "1.8976198599275322",
+         "5.67",
          "2.5649493574615367",
          "1"
         ],
@@ -2696,7 +2697,7 @@
          "3.9046221620874166",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2710,7 +2711,7 @@
          "2.0363418446276302",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2724,7 +2725,7 @@
          "3.183493268324268",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2738,7 +2739,7 @@
          "5.585699907528334",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2752,7 +2753,7 @@
          "5.526081569792128",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2766,7 +2767,7 @@
          "5.150344507795399",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2780,7 +2781,7 @@
          "2.6364176701052364",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2794,7 +2795,7 @@
          "2.348492927195021",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2808,7 +2809,7 @@
          "4.533047036297689",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2822,7 +2823,7 @@
          "2.953782100897698",
          "2.018895041811802",
          "0.5888971591861462",
-         "1.7884205679625405",
+         "4.98",
          "3.4011973816621555",
          "2"
         ],
@@ -2836,7 +2837,7 @@
          "4.444356123602325",
          "1.6620303625532709",
          "0.0",
-         "1.6331544390514163",
+         "4.12",
          "2.70805020110221",
          "2"
         ],
@@ -2850,7 +2851,7 @@
          "5.239318257719462",
          "1.6620303625532709",
          "0.0",
-         "1.6331544390514163",
+         "4.12",
          "2.70805020110221",
          "2"
         ],
@@ -2864,7 +2865,7 @@
          "4.919814974733188",
          "1.6620303625532709",
          "0.0",
-         "1.6331544390514163",
+         "4.12",
          "2.70805020110221",
          "2"
         ],
@@ -2878,7 +2879,7 @@
          "5.274509420993584",
          "1.6620303625532709",
          "0.0",
-         "1.6331544390514163",
+         "4.12",
          "2.70805020110221",
          "2"
         ],
@@ -2892,7 +2893,7 @@
          "5.639083552406448",
          "1.6620303625532709",
          "0.0",
-         "1.6331544390514163",
+         "4.12",
          "2.70805020110221",
          "2"
         ],
@@ -2906,7 +2907,7 @@
          "4.569593462295181",
          "1.6620303625532709",
          "0.0",
-         "1.6331544390514163",
+         "4.12",
          "2.70805020110221",
          "2"
         ],
@@ -2920,7 +2921,7 @@
          "4.760763259848794",
          "1.6620303625532709",
          "0.0",
-         "1.6331544390514163",
+         "4.12",
          "2.70805020110221",
          "2"
         ],
@@ -2934,7 +2935,7 @@
          "4.083748695215318",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -2948,7 +2949,7 @@
          "3.9225553936486017",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -2962,7 +2963,7 @@
          "3.359646689697146",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -2976,7 +2977,7 @@
          "5.719528319515742",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -2990,7 +2991,7 @@
          "4.825521057689481",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -3004,7 +3005,7 @@
          "3.1661176149625843",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -3018,7 +3019,7 @@
          "3.357115470570463",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -3032,7 +3033,7 @@
          "3.632477804263234",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -3046,7 +3047,7 @@
          "5.567671276826881",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -3060,7 +3061,7 @@
          "4.344687599010148",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -3074,7 +3075,7 @@
          "6.724944372828407",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -3088,7 +3089,7 @@
          "0.6039633221169534",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ],
@@ -3102,7 +3103,7 @@
          "0.9431735747339046",
          "2.061786606441115",
          "0.7202758479481978",
-         "1.8082887711792655",
+         "5.1",
          "3.713572066704308",
          "3"
         ]
@@ -3155,7 +3156,7 @@
        "      <td>0.948085</td>\n",
        "      <td>2.002830</td>\n",
        "      <td>0.775215</td>\n",
-       "      <td>1.773256</td>\n",
+       "      <td>4.89</td>\n",
        "      <td>3.258097</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -3169,7 +3170,7 @@
        "      <td>3.581097</td>\n",
        "      <td>2.002830</td>\n",
        "      <td>0.775215</td>\n",
-       "      <td>1.773256</td>\n",
+       "      <td>4.89</td>\n",
        "      <td>3.258097</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -3183,7 +3184,7 @@
        "      <td>0.284802</td>\n",
        "      <td>2.002830</td>\n",
        "      <td>0.775215</td>\n",
-       "      <td>1.773256</td>\n",
+       "      <td>4.89</td>\n",
        "      <td>3.258097</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -3197,7 +3198,7 @@
        "      <td>2.705505</td>\n",
        "      <td>2.002830</td>\n",
        "      <td>0.775215</td>\n",
-       "      <td>1.773256</td>\n",
+       "      <td>4.89</td>\n",
        "      <td>3.258097</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -3211,7 +3212,7 @@
        "      <td>4.811626</td>\n",
        "      <td>2.002830</td>\n",
        "      <td>0.775215</td>\n",
-       "      <td>1.773256</td>\n",
+       "      <td>4.89</td>\n",
        "      <td>3.258097</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -3239,7 +3240,7 @@
        "      <td>0.818215</td>\n",
        "      <td>1.909543</td>\n",
        "      <td>0.722706</td>\n",
-       "      <td>1.798404</td>\n",
+       "      <td>5.04</td>\n",
        "      <td>3.713572</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
@@ -3253,7 +3254,7 @@
        "      <td>10.003262</td>\n",
        "      <td>1.909543</td>\n",
        "      <td>0.722706</td>\n",
-       "      <td>1.798404</td>\n",
+       "      <td>5.04</td>\n",
        "      <td>3.713572</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
@@ -3267,7 +3268,7 @@
        "      <td>2.960662</td>\n",
        "      <td>1.909543</td>\n",
        "      <td>0.722706</td>\n",
-       "      <td>1.798404</td>\n",
+       "      <td>5.04</td>\n",
        "      <td>3.713572</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
@@ -3281,7 +3282,7 @@
        "      <td>5.842109</td>\n",
        "      <td>1.909543</td>\n",
        "      <td>0.722706</td>\n",
-       "      <td>1.798404</td>\n",
+       "      <td>5.04</td>\n",
        "      <td>3.713572</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
@@ -3295,7 +3296,7 @@
        "      <td>6.484854</td>\n",
        "      <td>1.909543</td>\n",
        "      <td>0.722706</td>\n",
-       "      <td>1.798404</td>\n",
+       "      <td>5.04</td>\n",
        "      <td>3.713572</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
@@ -3318,23 +3319,23 @@
        "189      208       Abies Alba     Mixed  2.749447  2.626117   5.842109   \n",
        "190      209  Fagus Sylvatica     Mixed  2.616926  2.580974   6.484854   \n",
        "\n",
-       "          lai   shannon   soil_pH       ibp  group  \n",
-       "0    2.002830  0.775215  1.773256  3.258097      1  \n",
-       "1    2.002830  0.775215  1.773256  3.258097      1  \n",
-       "2    2.002830  0.775215  1.773256  3.258097      1  \n",
-       "3    2.002830  0.775215  1.773256  3.258097      1  \n",
-       "4    2.002830  0.775215  1.773256  3.258097      1  \n",
-       "..        ...       ...       ...       ...    ...  \n",
-       "186  1.909543  0.722706  1.798404  3.713572     10  \n",
-       "187  1.909543  0.722706  1.798404  3.713572     10  \n",
-       "188  1.909543  0.722706  1.798404  3.713572     10  \n",
-       "189  1.909543  0.722706  1.798404  3.713572     10  \n",
-       "190  1.909543  0.722706  1.798404  3.713572     10  \n",
+       "          lai   shannon  soil_pH       ibp  group  \n",
+       "0    2.002830  0.775215     4.89  3.258097      1  \n",
+       "1    2.002830  0.775215     4.89  3.258097      1  \n",
+       "2    2.002830  0.775215     4.89  3.258097      1  \n",
+       "3    2.002830  0.775215     4.89  3.258097      1  \n",
+       "4    2.002830  0.775215     4.89  3.258097      1  \n",
+       "..        ...       ...      ...       ...    ...  \n",
+       "186  1.909543  0.722706     5.04  3.713572     10  \n",
+       "187  1.909543  0.722706     5.04  3.713572     10  \n",
+       "188  1.909543  0.722706     5.04  3.713572     10  \n",
+       "189  1.909543  0.722706     5.04  3.713572     10  \n",
+       "190  1.909543  0.722706     5.04  3.713572     10  \n",
        "\n",
        "[191 rows x 11 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3345,7 +3346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "f552aef7",
    "metadata": {},
    "outputs": [],
